--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Counter Widget</string>
+
+    <!-- CounterWidget -->
+    <string name="increment">Increment</string>
 </resources>
